<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CustomLevelFragment">


    <Button
        android:id="@+id/crea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="229dp"
        android:background="@drawable/ic_bottonenew"
        android:fontFamily="@font/chakrapetchbold"
        android:text="@string/create"
        android:textColor="#F2FFFFFF"
        android:textSize="20sp"
        android:letterSpacing="0.03"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowColor="#4D0B1E24"
        android:shadowRadius="9"
        android:paddingHorizontal="45dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:background="@drawable/ic_bottonenew"
        android:fontFamily="@font/chakrapetchbold"
        android:text="@string/play"
        android:textColor="#F2FFFFFF"
        android:textSize="20sp"
        android:letterSpacing="0.03"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowColor="#4D0B1E24"
        android:shadowRadius="9"
        android:paddingHorizontal="45dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/elimina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="355dp"
        android:background="@drawable/ic_bottonenew"
        android:drawableEnd="@drawable/delete_24px"
        android:fontFamily="@font/chakrapetchbold"
        android:letterSpacing="0.03"
        android:paddingHorizontal="45dp"
        android:shadowColor="#4D0B1E24"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="9"
        android:text="@string/delete"
        android:textColor="#F2FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/chakrapetchmedium"
        android:gravity="top"
        android:lineSpacingExtra="13sp"
        android:text="@string/customize"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:translationY="-6.4sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>