<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DifficultyFragment">
    <Button
        android:id="@+id/back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="306dp"
        android:background="@drawable/chevron_left_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="204dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="78dp"
        android:fontFamily="@font/chakrapetchmedium"
        android:gravity="top"
        android:lineSpacingExtra="-7sp"
        android:text="@string/difficulty"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="229dp"
        android:background="@drawable/ic_bottonenew"
        android:fontFamily="@font/chakrapetchbold"
        android:letterSpacing="0.03"
        android:paddingHorizontal="45dp"
        android:shadowColor="#4D0B1E24"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="9"
        android:text="@string/easy"
        android:textColor="#F2FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:background="@drawable/ic_bottonenew"
        android:fontFamily="@font/chakrapetchbold"
        android:letterSpacing="0.03"
        android:paddingHorizontal="45dp"
        android:shadowColor="#4D0B1E24"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="9"
        android:text="@string/medium"
        android:textColor="#F2FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="355dp"
        android:background="@drawable/ic_bottonenew"
        android:fontFamily="@font/chakrapetchbold"
        android:letterSpacing="0.03"
        android:paddingHorizontal="45dp"
        android:shadowColor="#4D0B1E24"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="9"
        android:text="@string/hard"
        android:textColor="#F2FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>